--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>App</title>
+    <title>ADMIN панель</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <base href="/" />
     <script type="module" src="index.tsx"></script>
